--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "remove-unused-imports",
-  "displayName": "Remove Unused Imports",
-  "version": "0.0.0-development",
+  "name": "remove-unused-imports-ts-494",
+  "displayName": "Remove Unused Imports (TS 4.9.4)",
+  "version": "1.0.1",
   "description": "Removes unused ES6 imports in JavaScript and TypeScript files without changing the order",
   "categories": [
     "Formatters",
@@ -23,8 +23,8 @@
     "url": "https://github.com/kcmr/vsce-remove-unused-imports.git"
   },
   "license": "MIT",
-  "author": "Kus Cámara",
-  "publisher": "kuscamara",
+  "author": "Bae Hwidong",
+  "publisher": "spilist",
   "main": "./dist/extension.js",
   "contributes": {
     "commands": [
@@ -42,7 +42,7 @@
     "onLanguage:typescriptreact"
   ],
   "engines": {
-    "vscode": "^1.0.0"
+    "vscode": "^1.74.0"
   },
   "icon": "images/icon.png",
   "galleryBanner": {
@@ -62,34 +62,35 @@
     "semantic-release": "semantic-release"
   },
   "devDependencies": {
-    "@babel/core": "^7.15.0",
-    "@babel/plugin-proposal-decorators": "^7.17.2",
-    "@babel/plugin-syntax-jsx": "^7.16.7",
-    "@babel/plugin-syntax-typescript": "^7.16.7",
-    "@semantic-release/changelog": "^6.0.1",
+    "@babel/core": "^7.20.12",
+    "@babel/plugin-proposal-decorators": "^7.20.7",
+    "@babel/plugin-syntax-jsx": "^7.18.6",
+    "@babel/plugin-syntax-typescript": "^7.20.0",
+    "@semantic-release/changelog": "^6.0.2",
     "@semantic-release/git": "^10.0.1",
-    "@types/babel__core": "^7.1.15",
-    "@types/vscode": "^1.0.0",
-    "@typescript-eslint/eslint-plugin": "^4.29.1",
-    "@typescript-eslint/parser": "^4.29.1",
-    "esbuild": "^0.12.20",
-    "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-config-standard": "^16.0.3",
-    "eslint-plugin-import": "^2.24.0",
-    "eslint-plugin-jest": "^24.4.0",
+    "@types/babel__core": "^7.1.20",
+    "@types/vscode": "^1.74.0",
+    "@typescript-eslint/eslint-plugin": "^5.48.1",
+    "@typescript-eslint/parser": "^5.48.1",
+    "esbuild": "^0.16.16",
+    "eslint": "^8.31.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jest": "^27.2.1",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^3.4.0",
-    "eslint-plugin-promise": "^6.0.0",
-    "jest": "^27.0.6",
-    "lint-staged": "^11.1.2",
-    "prettier": "^2.3.2",
-    "recast": "^0.20.5",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-promise": "^6.1.1",
+    "interactive": "^0.1.9",
+    "jest": "^29.3.1",
+    "lint-staged": "^13.1.0",
+    "prettier": "^2.8.2",
+    "recast": "^0.22.0",
     "rimraf": "^3.0.2",
-    "semantic-release": "^19.0.3",
-    "semantic-release-vsce": "^5.1.0",
-    "simple-git-hooks": "^2.8.0",
-    "typescript": "^4.3.2"
+    "semantic-release": "^20.0.2",
+    "semantic-release-vsce": "^5.5.3",
+    "simple-git-hooks": "^2.8.1",
+    "typescript": "^4.9.4"
   },
   "lint-staged": {
     "src/*.ts": "eslint --cache --fix",
